# tutorial_2020

./: .gitignore  a.out  longestPalindrome.cpp
tasks/project/: README.md  plane.rar  readme.md
tasks/project/ImageProcessing/QRcodeProcessing/: README.md
tasks/project/ImageProcessing/borderDetection/: CMakeLists.txt
tasks/project/ImageProcessing/iPadMaskVideoProcessing/: CMakeLists.txt  README.md
tasks/project/ImageProcessing/iPadMaskVideoProcessing/inc/: qr.h
tasks/project/ImageProcessing/iPadMaskVideoProcessing/src/: extract.cpp  processVideo.cpp  splice.cpp
tasks/project/ImageProcessing/iPadMaskVideoProcessing/test/: main.cpp
tasks/project/descriptions/: Control.md  Image_processing.md
tasks/project/gate_project/: Makefile  README.md
tasks/project/gate_project/TEST_FILES/: test1.txt
tasks/project/gate_project/include/: header.h
tasks/project/gate_project/src/: func.cpp  gate.cpp  main.cpp
tasks/project/plane/: quad core.xml
tasks/project/thread_project/: Makefile  README.md
tasks/project/thread_project/TEST_FILES/: readme.md
tasks/project/thread_project/include/: header.h
tasks/project/thread_project/src/: main.cpp  thread.cpp
tasks/week1/: .gitignore  HelloWorld.cpp  Longest_Palindrome  Longest_Palindrome.cpp  Longest_Palindrome.h  Makefile  Palindrome.cpp  hello.cpp  helloWorld.cpp  helloworld.cpp  longestPalindrome.cpp  palindrome.cpp  second.h  zhw_palindrome.cpp  最长回文子串.cpp
tasks/week1/helloWorld/: main.cpp
tasks/week1/longestPalindrome/: longestPalindrome.cpp  longestPalindrome.h  main.cpp
tasks/week2/: digit_display.cpp  longestCommon.cpp  longest_common.cpp  script1.sh  script2.sh  search.cpp  suffix.cpp  test1.sh  test2.sh
tasks/week2/Level1/: CMakeLists.txt  README.md
tasks/week2/Level1/inc/: digit.h
tasks/week2/Level1/src/: binarization.cpp  getNumbers.cpp  svm.cpp  trainSetProcess.cpp
tasks/week2/Level1/test/: main.cpp
tasks/week2/Level2/: CMakeLists.txt  README.md
tasks/week2/Level2/inc/: digit.h
tasks/week2/Level2/src/: binarization.cpp  getDigitalTube.cpp  getNumbers.cpp  trainingSetProcess.cpp
tasks/week2/Level2/test/: main.cpp
tasks/week2/Opencv/: CMakeLists.txt  READMEweek2.md
tasks/week2/Opencv/inc/: opencv.h
tasks/week2/Opencv/src/: func.cpp
tasks/week2/Opencv/test/: readtest.cpp
tasks/week2/digit_programme/: README.md
tasks/week2/longestCommon/: longestCommon.cpp  longestCommon.h  main.cpp
tasks/week2/realise_digtal/: CMakeLists.txt  readme.md
tasks/week2/realise_digtal/inc/: opencv.h
tasks/week2/realise_digtal/src/: opencv.cpp
tasks/week2/realise_digtal/test/: demo.cpp
tasks/week2/seven-segment_recognition/: CMakeLists.txt  README.md
tasks/week2/seven-segment_recognition/act-1_to_act-2/: main.cpp  recognition.cpp  recognition.h
tasks/week2/seven-segment_recognition/hard-1_to_hard-2/: main.cpp  recognition.cpp
tasks/week2/seven-segment_recognition/sim-1_to_sim-4/: recognition.cpp
tasks/week2/seven-segment_recognition/sim-5_to_sim-6/: main.cpp  recognition.cpp  recognition.h
tasks/week2/seven-segment_recognition/sim-7_to_sim-8/: main.cpp  recognition.cpp
tasks/week2/shell_exercise/: script1st.sh  script2nd.sh  test1.sh  test2.sh
tasks/week2/shell_exercises/: shell_test1.bash  shell_test2.bash
tasks/week2/图片处理过程/: programme_task2_README.md
tasks/week2/数字识别/: func.cpp  header.h  main.cpp  makefile  readme.md
tasks/week2/数码管识别/: Makefile  README.md
tasks/week2/数码管识别/include/: myFunction_act.hpp  myFunction_sim.hpp
tasks/week2/数码管识别/src/: myFunction_act.cpp  myFunction_sim.cpp  数码管识别.cpp
tasks/week2/最长公共后缀/: longestCommon.cpp
tasks/week2/编程练习/: 最长公共后缀.cpp
tasks/week3/: readme.md
tasks/week3/catkin_ws/: README.md  readme.md
tasks/week3/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
tasks/week3/catkin_ws/launch/: my.launch
tasks/week3/catkin_ws_1/: README.md
tasks/week3/catkin_ws_1/src/random_int/: CMakeLists.txt
tasks/week3/catkin_ws_1/src/random_int/launch/: random_int.launch
tasks/week3/catkin_ws_1/src/random_int/src/: listener.cpp  talker.cpp
tasks/week3/catkin_ws_2/: README.md
tasks/week3/catkin_ws_2/src/random_float/: CMakeLists.txt  package.xml
tasks/week3/catkin_ws_2/src/random_float/cfg/: my_cfg.cfg
tasks/week3/catkin_ws_2/src/random_float/src/: judge_client.cpp  judge_server.cpp
tasks/week3/catkin_ws_2/src/random_float/srv/: Judge.srv
tasks/week3/ros_project/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
tasks/week3/ros_project/src/random_float/: CMakeLists.txt  package.xml
tasks/week3/ros_project/src/random_float/src/: judge_client.cpp  judge_server.cpp
tasks/week3/ros_project/src/random_int/: package.xml
tasks/week3/ros_project/src/random_int/src/: talker.cpp
tasks/week3/ros_project_me/: readme.md
(+199 files in other folders)
